--- a/package.json
+++ b/package.json
@@ -25,11 +25,13 @@
   },
   "homepage": "https://github.com/tacheometry/Rostar#readme",
   "devDependencies": {
+    "@types/hasbin": "^1.2.0",
     "@types/node": "^17.0.7",
     "typescript": "^4.5.4"
   },
   "dependencies": {
     "chalk": "^4.1.2",
-    "commander": "^8.3.0"
+    "commander": "^8.3.0",
+    "hasbin": "^1.2.3"
   }
 }
