--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     ".remodel/**"
   ],
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "npx tsc",
     "watch": "npx tsc -w",
     "start": "node out/index.js"
