--- a/.editorconfig
+++ b/.editorconfig
@@ -6,7 +6,7 @@ root = true
 end_of_line = lf
 insert_final_newline = true
 
-[*.ts]
+[*.{ts,json}]
 charset = utf-8
 indent_style = tab
 indent_size = 4
