Migrate to Lune, use Rokit

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
 	"main": "out/index.js",
 	"files": [
 		"out/**",
-		".remodel/**"
+		".lune/**"
 	],
 	"scripts": {
 		"prepublishOnly": "npm run build",
